# crypto-vibeness

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  DEVELOPMENT.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  START_HERE.md  TESTING.md  client.py  config.py  crack_md5.py  crypto_utils.py  demo_notifications.py  notifications.py  password_rules.json  pyproject.toml  requirements.txt  server.py  test_e2e_encryption.py
jour1_yolo/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_JOUR1.md  client.py  config.py  log_2026-04-16_10-29-56.txt  log_2026-04-16_10-40-29.txt  password_rules.json  server.py  test_comprehensive.py  test_server.py  validate_requirements.py
jour2_crypto/: JOUR2_PLAN.md  __init__.py  client.py  config.py  crypto_utils.py  md5_decrypted.txt  md5_yolo.txt  server.py
jour3_asymmetric/: JOUR3_PLAN.md  client.py  config.py  crypto_rsa.py  crypto_utils.py  server.py
jour4_ecdh/: client.py  config.py  crypto_ecdh.py  server.py
tests/: test_crypto.py
